package lab3.pojos;
public interface SaleableItem {
    public void sellItem();
    public double getPrice();
}
